[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true

[tool.black]
line_length = 79
skip-string-normalization = true

[tool.poetry]
name = "cocomo-python"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pkginfo = "^1.7.0"
httpx = "^0.17.1"
peewee = "^3.14.4"
fire = "^0.4.0"
dash = "^1.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
